{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 597,
  "lineage": "2eb08779-387e-ac29-1b76-6ece5d52c97c",
  "resources": [
    {
      "module": "module.app_alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:security-group/sg-0885dea7a24535d03",
            "description": "Allowing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0885dea7a24535d03",
            "ingress": [],
            "name": "App-ALB",
            "name_prefix": "",
            "owner_id": "600627337151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "APP",
              "Environment": "DEV",
              "Name": "App-ALB",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "APP",
              "Environment": "DEV",
              "Name": "App-ALB",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4971ce7ba319b26"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.cart_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:security-group/sg-04a35ca8ef8bef087",
            "description": "Allowing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a35ca8ef8bef087",
            "ingress": [],
            "name": "cart",
            "name_prefix": "",
            "owner_id": "600627337151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "cart",
              "Environment": "DEV",
              "Name": "cart",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "cart",
              "Environment": "DEV",
              "Name": "cart",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4971ce7ba319b26"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.catalogue_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:security-group/sg-01b80552250a9f289",
            "description": "Allowing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b80552250a9f289",
            "ingress": [],
            "name": "catalogue",
            "name_prefix": "",
            "owner_id": "600627337151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "Catalogue",
              "Environment": "DEV",
              "Name": "Catalogue",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Catalogue",
              "Environment": "DEV",
              "Name": "Catalogue",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4971ce7ba319b26"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:security-group/sg-02aa54c47f78a858b",
            "description": "Allowing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02aa54c47f78a858b",
            "ingress": [],
            "name": "mongodb",
            "name_prefix": "",
            "owner_id": "600627337151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "MongoDB",
              "Environment": "DEV",
              "Name": "MongoDB",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "MongoDB",
              "Environment": "DEV",
              "Name": "MongoDB",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4971ce7ba319b26"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:security-group/sg-04c9f414df1c90d82",
            "description": "Allowing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c9f414df1c90d82",
            "ingress": [],
            "name": "mysql",
            "name_prefix": "",
            "owner_id": "600627337151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "mysql",
              "Environment": "DEV",
              "Name": "mysql",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "mysql",
              "Environment": "DEV",
              "Name": "mysql",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4971ce7ba319b26"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.redis_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:security-group/sg-0275040b6c8933243",
            "description": "Allowing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0275040b6c8933243",
            "ingress": [],
            "name": "redis",
            "name_prefix": "",
            "owner_id": "600627337151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "redis",
              "Environment": "DEV",
              "Name": "redis",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "redis",
              "Environment": "DEV",
              "Name": "redis",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4971ce7ba319b26"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.user_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:security-group/sg-05c8fee84fbc2cdba",
            "description": "Allowing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c8fee84fbc2cdba",
            "ingress": [],
            "name": "user",
            "name_prefix": "",
            "owner_id": "600627337151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "user",
              "Environment": "DEV",
              "Name": "user",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "user",
              "Environment": "DEV",
              "Name": "user",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4971ce7ba319b26"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.web_alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:security-group/sg-0ac4aa8abcd28b8a8",
            "description": "Allowing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac4aa8abcd28b8a8",
            "ingress": [],
            "name": "Web-ALB",
            "name_prefix": "",
            "owner_id": "600627337151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "Web",
              "Environment": "DEV",
              "Name": "Web-ALB",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Web",
              "Environment": "DEV",
              "Name": "Web-ALB",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4971ce7ba319b26"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.web_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627337151:security-group/sg-05f9cfce439608831",
            "description": "Allowing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f9cfce439608831",
            "ingress": [],
            "name": "web",
            "name_prefix": "",
            "owner_id": "600627337151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "Web",
              "Environment": "DEV",
              "Name": "roboshop-web",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "Web",
              "Environment": "DEV",
              "Name": "roboshop-web",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4971ce7ba319b26"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    }
  ]
}